# yolov4_tiny_rs

./: .gitignore  Cargo.toml  README.md
cuda11-cublasLt-sys/: Cargo.toml  build.rs  wrapper.h
cuda11-cublasLt-sys/src/: cublasLt.rs  lib.rs
cuda11-cuda-sys/: Cargo.toml  build.rs
cuda11-cuda-sys/src/: cuda.rs  lib.rs
cuda11-cudart-sys/: Cargo.toml  build.rs
cuda11-cudart-sys/src/: cudart.rs  lib.rs
cuda11-cudnn-sys/: Cargo.toml  build.rs
cuda11-cudnn-sys/src/: cudnn.rs  lib.rs
cuda11-cutensor-sys/: Cargo.toml  build.rs  test  wrapper.h
cuda11-cutensor-sys/examples/: cutensor_error.rs  linux_error.c  linux_error.rs
cuda11-cutensor-sys/src/: cutensor.rs  lib.rs
data/: anchors_0  anchors_1  strides_0  strides_1  xygrid_13  xygrid_26
src/: dnn.rs  main.rs  model.rs  numpy.rs  tensor.rs
stb_image-sys/: Cargo.toml
stb_image-sys/src/: lib.rs
stb_image-sys/stb_image/: build.rs  stb_image.c
stb_image_write-sys/: Cargo.toml
stb_image_write-sys/src/: lib.rs
stb_image_write-sys/stb_image_write/: build.rs
stb_resize-sys/: Cargo.toml
stb_resize-sys/src/: lib.rs
stb_resize-sys/stb_resize/: build.rs  stb_resize.c
stb_tt-sys/: Cargo.toml
stb_tt-sys/src/: lib.rs
stb_tt-sys/stb_tt/: build.rs  stb_truetype.c
