[package]
name = "cuda11-cudart-sys"
version = "0.1.0"
authors = ["yguan <yguan@example.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# links = "cuda"
build = "build.rs"

[dependencies]
#cuda11-cuda-sys = { path = "../cuda11-cuda-sys", version = "0.1" }

libc = "0.2"


[build-dependencies]
bindgen = { version = "0.54", optional = true }

[features]
default = ["generate"]
generate = ["bindgen"]
