[package]
name = "stb_image-sys"
version = "0.1.0"
authors = ["TKGgunter <thothgunter@live.com>"]
edition = "2018"
build   = "stb_image/build.rs"
links = "stb_image"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]


[build-dependencies]
cc = "1.0"
pkg-config = "0.3"
